# decorators_practice

./: README.md  decorators.py  libs.txt  pyproject.toml
